plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.5'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'NovelForm'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'	// @Validated 사용을 위해
	implementation 'org.springframework.boot:spring-boot-starter-security'		// 스프링 시큐리티
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'	// swagger-ui 와 spring-boot 통합
	testImplementation 'org.projectlombok:lombok:1.18.26'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	//H2 database
	implementation 'com.h2database:h2'

	// CSV file parser
	implementation 'com.opencsv:opencsv:5.5'

	// JPA Query 시 ?에 대한 값을 볼 수 있게 해주는 라이브러리
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
}

tasks.named('test') {
	useJUnitPlatform()
}
